whereIsRepo & initTests changed